k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: story-writing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: dockerhub-credentials
      containers:
        - name: worker
          image: solutionsai/story-writing-backend:latest
          command: ["node", "server/jobs/workers.js"]
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 4Gi
